# GameSide

./: LICENSE  README.md
gameside/: .gitignore  .pypas.toml  justfile  pyproject.toml
gameside/categories/: models.py  serializers.py
gameside/categories/migrations/: 0001_initial.py
gameside/factories/: __init__.py  auth.py  categories.py  data.py  extras.py  games.py  orders.py  platforms.py  users.py
gameside/fixtures/: auth.json  categories.json  games.json  orders.json  platforms.json  users.json
gameside/games/: admin.py  models.py  serializers.py  urls.py  views.py
gameside/games/migrations/: 0001_initial.py
gameside/main/: exceptions.py  settings.py  urls.py
gameside/orders/: decoratos.py  models.py
gameside/orders/migrations/: 0001_initial.py
gameside/shared/: serializers.py  views.py
gameside/tests/: conftest.py  helpers.py  test_categories.py  test_core.py  test_games.py  test_orders.py  test_platforms.py  test_users.py
gameside/users/: models.py  serializers.py
gameside/users/migrations/: 0001_initial.py
